# yolo_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: KeyPoint2D.msg  PoseCovArray.msg
