<?xml version="1.0"?>
<package format="2">
  <name>yolo_msgs</name>
  <version>1.20.0</version>
  <description>
    adaptor for https://github.com/maulanaazhari/drone-racing-msgs.git
  </description>

  <maintainer email="maulanaazhari19@gmail.com">Maulana Bisyir Azhari</maintainer>
  <author email="maulanaazhari19@gmail.com">Maulana Bisyir Azhari</author>
  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>